@@ -2,12 +2,15 @@ package com.axiora.spotgo.parking.interfaces.rest;
 
 import com.axiora.spotgo.parking.domain.model.aggregates.Parking;
 import com.axiora.spotgo.parking.domain.model.commands.CreateParkingCommand;
+import com.axiora.spotgo.parking.domain.model.commands.UpdateParkingCommand;
 import com.axiora.spotgo.parking.domain.model.queries.GetAllParkingsQuery;
 import com.axiora.spotgo.parking.domain.model.queries.GetParkingByIdQuery;
 import com.axiora.spotgo.parking.application.internal.commandservices.ParkingCommandService;
 import com.axiora.spotgo.parking.application.internal.queryservices.ParkingQueryService;
 import com.axiora.spotgo.parking.interfaces.rest.resources.CreateParkingResource;
 import com.axiora.spotgo.parking.interfaces.rest.resources.ParkingResource;
+import com.axiora.spotgo.parking.interfaces.rest.resources.UpdateParkingResource;
+import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import io.swagger.v3.oas.annotations.Operation;
@@ -16,10 +19,10 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/parkings")
@@ -28,20 +31,20 @@ public class ParkingsController {
 
     private final ParkingCommandService parkingCommandService;
     private final ParkingQueryService parkingQueryService;
-
     public ParkingsController(ParkingCommandService parkingCommandService, ParkingQueryService parkingQueryService) {
         this.parkingCommandService = parkingCommandService;
         this.parkingQueryService = parkingQueryService;
     }
 
     @PostMapping
+    @PreAuthorize("hasRole('ADMIN')")
     @Operation(summary = "Create a parking", description = "Creates a new parking facility.")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "201", description = "Parking created successfully",
                     content = @Content(schema = @Schema(implementation = ParkingResource.class))),
             @ApiResponse(responseCode = "400", description = "Invalid input")
     })
-    public ResponseEntity<ParkingResource> createParking(@RequestBody CreateParkingResource resource) {
+    public ResponseEntity<ParkingResource> createParking(@Valid @RequestBody CreateParkingResource resource) {
         var command = new CreateParkingCommand(
                 resource.adminId(), resource.name(), resource.address(), resource.city(),
                 resource.totalSpaces(), resource.availableSpaces(), resource.totalFloors(),
@@ -65,37 +68,40 @@ public class ParkingsController {
         var parkings = parkingQueryService.handle(new GetAllParkingsQuery());
         var resources = parkings.stream()
                 .map(this::toResource)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(resources);
     }
 
+    @GetMapping("/{parkingId}")
+    @Operation(summary = "Get parking by id", description = "Returns a parking facility by its identifier.")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Parking returned successfully",
+                    content = @Content(schema = @Schema(implementation = ParkingResource.class))),
+            @ApiResponse(responseCode = "404", description = "Parking not found")
+    })
+    public ResponseEntity<ParkingResource> getParkingById(@PathVariable String parkingId) {
+        var parking = parkingQueryService.handle(new GetParkingByIdQuery(parkingId));
+        return parking.map(value -> ResponseEntity.ok(toResource(value)))
+                .orElseGet(() -> ResponseEntity.notFound().build());
+    }
+
     @PatchMapping("/{parkingId}")
-    @Operation(summary = "Update parking rating", description = "Updates the rating of a parking facility.")
+    @Operation(summary = "Update parking", description = "Updates mutable parking fields used by the frontend.")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Rating updated successfully",
                     content = @Content(schema = @Schema(implementation = ParkingResource.class))),
             @ApiResponse(responseCode = "400", description = "Invalid input"),
             @ApiResponse(responseCode = "404", description = "Parking not found")
     })
-    public ResponseEntity<ParkingResource> updateParkingRating(@PathVariable Long parkingId, @RequestBody java.util.Map<String, Object> body) {
-        if (!body.containsKey("rating")) {
-            return ResponseEntity.badRequest().build();
-        }
-        var ratingVal = body.get("rating");
-        Double rating = null;
-        if (ratingVal instanceof Number) {
-            rating = ((Number) ratingVal).doubleValue();
-        }
-        if (rating == null) {
-            return ResponseEntity.badRequest().build();
-        }
-        var command = new com.axiora.spotgo.parking.domain.model.commands.UpdateParkingRatingCommand(parkingId, rating);
-        var updatedParkingOpt = parkingCommandService.handle(command);
-        if (updatedParkingOpt.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-        var updatedParking = updatedParkingOpt.get();
-        return ResponseEntity.ok(toResource(updatedParking));
+    public ResponseEntity<ParkingResource> updateParkingRating(@PathVariable String parkingId, @RequestBody UpdateParkingResource resource) {
+        var updatedParkingOpt = parkingCommandService.handle(new UpdateParkingCommand(
+                parkingId,
+                resource.totalSpaces(),
+                resource.availableSpaces(),
+                resource.totalFloors(),
+                resource.rating()));
+        return updatedParkingOpt.map(parking -> ResponseEntity.ok(toResource(parking)))
+                .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
     private ParkingResource toResource(Parking parking) {
